--- a/public/tpl/modelspages/profil.html.twig
+++ b/public/tpl/modelspages/profil.html.twig
@@ -5,8 +5,9 @@
       <h2>PROFIL DE {{ userinfo.pseudo }}</h2>
       <p>Mail : {{ userinfo.email }}</p>
       <br>
-        <a href="edit-profil">Edition profil</a>
-        <a href="edit-films">Modifier mes film</a>
+        <a href="{{docRoot}}edit-profil">Edition profil</a>
+        <a href="{{docRoot}}edit-films/Éditer">Modifier mes film</a>
+        <a href="{{docRoot}}edit-films/Ajouter">Ajouter un film</a>
   </section>
 
   {% block section %}
