--- a/public/tpl/edit-films.html.twig
+++ b/public/tpl/edit-films.html.twig
@@ -13,12 +13,12 @@
               <h3>Mes films :</h3>
               <div class="row">
                 {% for key,film in listfilmssoumis %}
-                  <div class="col-sm-12 col-md-6 col-lg-3">
-                    <a href="{{ docRoot }}edit-films/Éditer/{{film.id }}">
+                  <div class="col-sm-12 col-md-6 col-lg-4">
                       <h3> {{ film.titre }} </h3>
                       <img class="img-fluid" src="{{ docRoot }}public/images/{{ film.affiche }}.jpg">
                       <p> {{ film.genre }} </p>
-                    </a>
+                      <a href="{{ docRoot }}edit-films/Éditer/{{film.id }}">Modifier</a>
+                      <a href="{{ docRoot }}edit-films/Supprimer/{{film.id }}">Supprimer</a>
                   </div>
                 {% endfor %}
               </div>
@@ -28,16 +28,25 @@
         <div class="col-sm-12 col-lg-6">
             <h3> {{actionForm}} un film :</h3>
             <p>Tous les champs sont obligatoires</p>
+
+            {# FORMULAIRE #}
             <form method="post" action="" enctype="multipart/form-data">
             <input type="varchar" name="hidden" value="{{ actionForm }}" hidden>
             <input type="varchar" name="id" value="{{ edititing.id }}" hidden>
+
+            {# FORMULAIRE DE SUPPRESSION #}
+            {% if actionForm == 'Supprimer' %}
+                <label for="deleteThis">Confirmez la suppression.</label>
+                <input id="deleteThis" type="checkbox" name="confirm" required>
+
+            {# FORMULAIRE STANDARD (edition : ajout) #}
+            {% else %}
 
                 <label>Titre du film</label><br>
                 <input type="text" name="titre" value="{{ edititing.titre }}" minlenght="2" maxlength="30" required><br>
 
                 <label>Date de sortie</label><br>
                 <input type="text" name="annee" value="{{ edititing.annee }}" minlenght="4" maxlength="4" required><br>
-
 
 
                 <fieldset>
@@ -116,6 +125,7 @@
                     </div>
                 </fieldset>
 
+
                 <label>Acteur(s)</label><br>
                 <input type="text" name="acteurs" value="{{ edititing.acteurs }}" id="acteurs" minlength="10" maxlength="100" required><br>
 
@@ -144,8 +154,13 @@
                   Nouvelle affiche :
                   <input type="file" name="nouvelleaffiche" ><br>
 
+                {# FIN FORMULAIRE STANDARD #}
+                {% endif %}
+
                 <hr>
                 <input type="submit" id="btn" value="Soumettre"> {% if msgerror is defined%} {{ msgerror }} {% endif %}
+                {# FIN DE FORMULAIRE #}
+
           </div>
       </div>
       </form>
