--- a/public/tpl/connexion.html.twig
+++ b/public/tpl/connexion.html.twig
@@ -1,7 +1,4 @@
 {% extends "modelspages/index.html.twig" %}
-{% block header %}
-{% endblock %}
-
 {% block main %}
 
   <div class="container">
@@ -27,6 +24,7 @@
       </div>
       <button type="submit" value="submit">Soumettre</button>
       </form>
+      <div id="imgcine"></div>
 
       
 
