--- a/public/tpl/modelspages/footer.html.twig
+++ b/public/tpl/modelspages/footer.html.twig
@@ -1,10 +1,17 @@
 <footer>
     <div class="container-fluid">
+    
+<div class="row">
+<div id="footerimg" class="col-12">
+</div>
+</div>
         <div class="row">
             <div  class="col-12">
                 <p id="footer-title">CAFE LATTE © 2019</p>
             </div>
         </div>
+
+
 
         <div class="row">
             <div class="col-4">
