--- a/public/tpl/home.html.twig
+++ b/public/tpl/home.html.twig
@@ -27,7 +27,7 @@
           <div class="col-sm-12 col-md-6 col-lg-3">
             <a href="home/film/{{film.id }}">
               <h3> {{ film.titre }} </h3>
-              <img class="img-fluid" src="{{ docRoot }}public/images/{{ film.affiche }}.jpg">
+              <img class="img-fluid" src="{{ docRoot }}public/images/{{ film.affiches }}.jpg">
               <p> {{ film.genre }} </p>
             </a>
           </div>
@@ -42,7 +42,7 @@
 
       <div class="col-12">
         <h2> {{ film.titre }} </h2>
-        <img src="{{ docRoot }}public/images/{{ film.affiche }}.jpg">
+        <img src="{{ docRoot }}public/images/{{ film.affiches }}.jpg">
         <p> {{ film.description }} </p>
         <p> {{ film.genre }} </p>
       </div>
