--- a/public/tpl/home.html.twig
+++ b/public/tpl/home.html.twig
@@ -7,7 +7,13 @@
 
       <h3>Rechercher par thème</h3>
 
-      <nav class="navbar navbar-light navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand" href="#"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
         <ul class="navbar-nav ">
       {% for genre in genres %}
             <li class='nav-item genre-items'>
