--- a/public/tpl/home.html.twig
+++ b/public/tpl/home.html.twig
@@ -27,7 +27,7 @@
           <div id="blocfilm" class="col-sm-12 col-md-6 col-lg-3">
             <a href="home/film/{{film.id }}">
               <h3> {{ film.titre }} </h3>
-              <img class="img-fluid" src="{{ docRoot }}public/images/{{ film.affiches }}.jpg">
+              <img class="img-fluid" src="{{ docRoot }}public/images/{{ film.affiche }}.jpg">
               <p> {{ film.genre }} </p>
             </a>
           </div>
@@ -36,7 +36,7 @@
     {% endif %}
 
 
-   
+
 
     {% if film %}
 
