--- a/public/tpl/home.html.twig
+++ b/public/tpl/home.html.twig
@@ -42,7 +42,7 @@
 
       <div class="col-12">
         <h4> {{ film.titre }} </h4>
-        <img class="img-fluid" src="{{ docRoot }}public/images/{{ film.affiche }}.jpg">
+        <img class="img-fluid" src="{{ docRoot }}public/images/{{ film.affiches }}.jpg">
         <p> {{ film.description }} </p>
         <p> {{ film.genre }} </p>
       </div>
