--- a/public/css/core.css
+++ b/public/css/core.css
@@ -124,37 +124,61 @@ body main input {
 body main footer {
   padding: 1em;
   width: 100%;
-  background-color: black;
-  color: #ee2b2e;
-  padding: 1em;
 }
-body main footer #footerimg {
-  background-image: url(../images/seat.png);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 500px;
-}
-body main #footer-title {
+body main footer #footer-title {
   background-color: #ee2b2e;
   color: black;
   text-align: center;
   margin-top: -20px;
   font-size: 1em;
 }
-body main input::placeholder {
-  color: grey;
-  opacity: 0.5;
-}
-body main input {
+body main footer input {
   color: #ee2b2e;
 }
-body main input :hover {
+body main footer input :hover {
   background-color: transparent;
   border: none;
 }
-body main input input :active {
-  background-color: grey;
+body main footer input input :active {
+  color: #ee2b2e;
+}
+body main footer input::placeholder {
+  color: grey;
+  opacity: 0.5;
+  font-size: 1em;
+}
+body main footer i {
+  color: grey;
+  font-size: 3em;
+  margin-right: 10px;
+}
+body main footer #newsletter {
+  border: 2px solid #ee2b2e;
+  border-radius: 5px;
+  padding-top: 10px;
+  margin-bottom: 10px;
+  max-width: 80%;
+  max-height: 50px;
+  background-color: transparent;
+  color: #ee2b2e;
+  padding: 5px;
+}
+body main footer #btnnews {
+  background-color: transparent;
+  color: #ee2b2e;
+  border-color: transparent;
+}
+body main footer a {
+  font-size: 0.8em;
+  color: grey !important;
+}
+body main footer a:hover {
+  color: #ee2b2e;
+  text-decoration: none;
+}
+body main footer li {
+  list-style: none;
+  display: inline;
 }
 @media all and (min-width: 1024px) and (max-width: 1280px) {
   body #loupe {
