--- a/public/scss/core.scss
+++ b/public/scss/core.scss
@@ -132,44 +132,67 @@ body {
         }
   
         footer {
-            
-        padding: 1em;
-        width: 100%;
-            #footerimg {
-                background-image: url(../images/seat.png);
-                background-position: center;
-                background-size: cover;
-                background-repeat: no-repeat;
-                height: 500px;
-            }
-                background-color: $primarycolor;
-                color: $secondarycolor;
-                padding: 1em;
-            }
+            padding: 1em;
+            width: 100%;
             #footer-title {
-                background-color: $secondarycolor;
-                color: $primarycolor;
-                text-align: center;
-                margin-top: -20px;
-                font-size: 1em;
-            }
-        input::placeholder {
-            color: grey;
-            opacity: 0.5;
-        }
-        input {
-            color: $secondarycolor;
-             :hover {
-                background-color: transparent;
-                border: none;
+            background-color: $secondarycolor;
+            color: $primarycolor;
+            text-align: center;
+            margin-top: -20px;
+            font-size: 1em;
             }
             input {
-                 :active {
-                    background-color: grey;
-                }
+            color: $secondarycolor;
+            :hover {
+            background-color: transparent;
+            border: none;
             }
-        }
+            input {
+            :active {
+            color: $secondarycolor;
+            }
+            }
+            }
+            input::placeholder {
+            color: grey;
+            opacity: 0.5;
+            font-size: 1em;
+            }
+            i {
+            color: grey;
+            font-size: 3em;
+            margin-right: 10px;
+            }
+            #newsletter {
+            border: 2px solid $secondarycolor;
+            border-radius: 5px;
+            padding-top: 10px;
+            margin-bottom: 10px;
+            max-width: 80%;
+            max-height: 50px;
+            background-color: transparent;
+            color: $secondarycolor;
+            padding: 5px;
+            }
+            #btnnews {
+            background-color: transparent;
+            color: $secondarycolor;
+            border-color: transparent;
+            }
+            a {
+            font-size: 0.8em;
+            color: grey !important;
+            }
+            a:hover {
+            color: $secondarycolor;
+            text-decoration: none;
+            }
+            li {
+            list-style: none;
+            display: inline;
+            }
     }
+}
 
     
        
@@ -296,4 +319,5 @@ body {
             display: none;
         }
     }
+
 }
