Ajout du système pour chercher un film

--- a/public/tpl/modelspages/profil.html.twig
+++ b/public/tpl/modelspages/profil.html.twig
@@ -6,6 +6,7 @@
       <p>Mail : {{ userinfo.email }}</p>
       <br>
         <a href="{{docRoot}}edit-profil">Edition profil</a>
+        <a href="{{docRoot}}edit-profil/Supprimer">Supprimer mon compte</a>
         <a href="{{docRoot}}edit-films/Éditer">Modifier mes film</a>
         <a href="{{docRoot}}edit-films/Ajouter">Ajouter un film</a>
   </section>
