--- a/public/tpl/mentions.html.twig
+++ b/public/tpl/mentions.html.twig
@@ -1,10 +1,15 @@
-{% extends "modelspages/index.html.twig" %}
+{% extends "modelspages/index.html.twig" %} {% block header %} {% endblock %} {% block main %}
 
-{% block header %}
-{% endblock %}
+<h4>Mentions légales du site cinéVore</h4>
 
-{% block main %}
 
-<p>bla bla bla bla</p>
+    <p>CaféLatte <br>10 rue Pablo Picasso <br>25000 BESANCON <br>06 54 81 98 48 <br>cafelatte@gmail.com </p>
+
+    <p>Directeur/trice de publication : <br>Boilley Adrien <br>Remy Marie-ange <br>Soavolory Sandra</p>
+
+
+
+    <p>Hébergeur : promo-27</p>
+
 
 {% endblock %}
