--- a/public/tpl/modelspages/navbar.html.twig
+++ b/public/tpl/modelspages/navbar.html.twig
@@ -2,13 +2,13 @@
     <div class="row">
         <nav id="navbar" class="navbar navbar-expand-lg fixed-top">
 
-            <div class="col-2" id="divimg">
-                <a class="navbar-brand" href="./{{docRoot}}"><img id="logo" class="img-fluid" alt="logo du site popcorn kawai" src="{{ docRoot }}public/images/popcorn.png" width="150"></a>
+            <div class="col-5" id="titres">
+                <!--<a class="navbar-brand" href="./{{docRoot}}"><img id="logo" class="img-fluid" alt="logo du site popcorn kawai" src="{{ docRoot }}public/images/logov.png" width="80"></a>-->
+                <a class="navbar-brand" href="./{{docRoot}}">
+                    <h1>cinéVore</h1>
+                </a>
             </div>
-            <div class="col-4" id="titres">
-                <h1>cinéVore</h1>
-            </div>
-            <div class="col-4">
+            <div class="col-5">
                 <form>
                     <input id="placeholder" type="search" placeholder="rechercher un film...">
                     <button class="btn" type="submit" id="loupe"><i class="fa fa-search"></i></button>
