--- a/public/tpl/home.html.twig
+++ b/public/tpl/home.html.twig
@@ -32,7 +32,7 @@
         {% for key,film in films %}
           <div id="blocfilm" class="col-sm-12 col-md-6 col-lg-3">
             <a href="home/film/{{film.id }}">
-              <h3> {{ film.titre }} </h3>
+              <h4 class="titrefilm"> {{ film.titre }} </h4>
               <img class="img-fluid" src="{{ docRoot }}public/images/{{ film.affiche }}.jpg">
               <p> {{ film.genre }} </p>
             </a>
