--- a/public/tpl/modelspages/carousel.html.twig
+++ b/public/tpl/modelspages/carousel.html.twig
@@ -1,11 +1,11 @@
-
-    <div class="container">
-        <div class="row" id="rowtitre">
-            <div class="col-12" id="titres">
-                <h3>le site référence des amoureux du cinéma qui veulent...</h3>
-            </div>
+<div class="container">
+    <div class="row" id="rowtitre">
+        <div class="col-12" id="titres">
+            <h3>le site référence des amoureux du cinéma qui veulent...</h3>
         </div>
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    </div>
+    <div class="row">
+        <div id="myCarousel" class="carousel slide col-8 offset-2" data-ride="carousel">
 
             <!-- Indicators -->
             <ol class="carousel-indicators">
@@ -48,7 +48,7 @@
                     <img class="d-block w-100" src="{{ docRoot }}public/images/carousel/interstellar-csl.jpg" alt="extrait du film Interstellar">
                     <div class="carousel-caption">
                         <h2>Interstellar</h3>
-                        <p>... se retourner le cerveau</p>
+                            <p>... se retourner le cerveau</p>
                     </div>
                 </div>
 
@@ -80,3 +80,6 @@
             </a>
         </div>
     </div>
+    <div class="row">
+        <div id="footerimg" class="col-12">
+        </div>
