--- a/public/tpl/modelspages/footer.html.twig
+++ b/public/tpl/modelspages/footer.html.twig
@@ -1,41 +1,39 @@
 <footer>
     <div class="container-fluid">
-    
-<div class="row">
-<div id="footerimg" class="col-12">
-</div>
-</div>
-        <div class="row">
-            <div class="col-12">
-                <p id="footer-title">CAFE LATTE © 2019</p>
-            </div>
+
+
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <p id="footer-title">CAFE LATTE © 2019</p>
+        </div>
+    </div>
+
+
+
+    <div class="row">
+        <div class="col-4">
+            <h3>Retrouvez-nous</h3>
+            <ul>
+                <li><a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="https://www.twitter.com"><i class="fab fa-twitter-square"></i></a></li>
+                <li><a href="https://www.linkedin.com"><i class="fab fa-linkedin"></i></a></li>
+            </ul>
         </div>
 
-
-
-        <div class="row">
-            <div class="col-4">
-                <h3>Retrouvez-nous</h3>
-                <ul>
-                    <li><a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a></li>
-                    <li><a href="https://www.twitter.com"><i class="fab fa-twitter-square"></i></a></li>
-                    <li><a href="https://www.linkedin.com"><i class="fab fa-linkedin"></i></a></li>
-                </ul>
-            </div>
-
-            <div class="col-5">
-                <h3>Newsletter</h3>
-                <form method="post" action="{{ docRoot }}newsletter">
-                    <input id="newsletter" type="email" name="email" placeholder="nom@email.fr">
-                    <button id="btnnews" type="submit"><i class="fas fa-envelope-square"></i></button>
-                </form>
-            </div>
-
-            <div class="col-3">
-                <h3>A propos</h3>
-                <p><a href="{{ docRoot }}conditions">Conditions générales</a></p>
-                <p><a href="{{ docRoot }}mentions">Mentions légales</a></p>
-            </div>
+        <div class="col-5">
+            <h3>Newsletter</h3>
+            <form method="post" action="{{ docRoot }}newsletter">
+                <input id="newsletter" type="email" name="email" placeholder="nom@email.fr" required>
+                <button class="btn" id="btnnews" type="submit"><i class="fas fa-envelope-square"></i></button>
+            </form>
         </div>
+
+        <div class="col-3">
+            <h3>A propos</h3>
+            <p><a href="{{ docRoot }}conditions">Conditions générales</a></p>
+            <p><a href="{{ docRoot }}mentions">Mentions légales</a></p>
+        </div>
+    </div>
     </div>
 </footer>
