--- a/public/tpl/modelspages/navbar.html.twig
+++ b/public/tpl/modelspages/navbar.html.twig
@@ -9,8 +9,8 @@
                 </a>
             </div>
             <div class="col-5">
-                <form>
-                    <input id="placeholder" type="search" placeholder="rechercher un film...">
+                <form action="" method="post">
+                    <input id="placeholder" name="searchFor" type="search" placeholder="rechercher un film...">
                     <button class="btn" type="submit" id="loupe"><i class="fa fa-search"></i></button>
                 </form>
             </div>
