--- a/public/tpl/modelspages/carousel.html.twig
+++ b/public/tpl/modelspages/carousel.html.twig
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row" id="rowtitre">
         <div class="col-12" id="titres">
-            <h3>le site référence des amoureux du cinéma qui veulent...</h3>
+            <h3>Le site référence des amoureux du cinéma qui veulent...</h3>
         </div>
     </div>
     <div class="row">
