--- a/public/scss/core.scss
+++ b/public/scss/core.scss
@@ -18,7 +18,12 @@
         }
         h3 {
             font-size: 2em;
+            padding:.5em;
+            padding-left:1.5em;
             text-shadow: 1px 2px 2px grey;
+            border-bottom:2px solid $secondarycolor;
+            border-left:2px solid $secondarycolor;
+            border-radius: 2em 0 0 2em;
         }
         h4 {
             font-size: 1.8em;
@@ -27,8 +32,12 @@
         p {
             font-size: 1.5em;
         }
+        #navbar {
+          background-image: linear-gradient(to bottom, black 70%, maroon 95%, red);
+          border-bottom:2px solid black;
+        }
         nav {
-            background-color: $primarycolor;
+          background-color:black;
             #titres {
                 z-index: 5;
                 text-align: justify;
@@ -47,10 +56,6 @@
                 color: $popcorn;
                 opacity: 0.5;
                 font-size: 1em;
-            }
-            i {
-                font-size: 2.5em;
-                color: $popcorn;
             }
             .navbar-toggler-icon {
                 background-image: url("https://cdn4.iconfinder.com/data/icons/wirecons-free-vector-icons/32/menu-alt-512.png");
@@ -71,6 +76,13 @@
             }
         }
         #header {
+          h3 {
+            font-size: 2em;
+            padding:.5em;
+            text-shadow: 1px 2px 2px grey;
+            background-color:black;
+            border:none;
+          }
             #footerimg {
                 background-image: url(../images/seat.png);
                 background-position: center;
@@ -98,6 +110,13 @@
             }
         }
         main {
+            a {
+              color:$popcorn;
+              &:hover {
+                color:$popcorn;
+              }
+            }
+
             #filmMain {
                 #affiche {
                     background-image: url("../images/{{ film.affiche }}.jpg");
@@ -126,20 +145,17 @@
                 }
             }
             #blocfilm {
-                margin-top: 20px;
-                padding-left: 10px;
-                h4,
-                p,
-                a {
-                    color: $popcorn;
-                }
-                .titrefilm {
-                    height: 2.5em;
-                }
-            }
-            a:hover {
+              padding:2em;
+              text-align:center;
+              h4,
+              p,
+              a {
+                  color: $popcorn;
+              }
+              &:hover {
                 text-decoration: none;
-                opacity: 0.5;
+                opacity: 0.7;
+              }
             }
             //main espace membre login
             h2 {
@@ -172,6 +188,7 @@
                 }
             }
             #navbarNav {
+
                 li {
                     font-size: 0.8em;
                     padding: 10px;
@@ -240,6 +257,13 @@
                 font-size: 3em;
                 margin-right: 10px;
             }
+            div {
+              div {
+                h3{
+                  background-color:black !important;
+                }
+              }
+            }
         }
         // ----------------------------------- media queries ------------------------------
         //desktop-laptop
@@ -247,9 +271,6 @@
             // input::placeholder,
             #loupe {
                 font-size: 1em !important;
-            }
-            i {
-                font-size: 2.5em;
             }
         }
         //laptop-tablet
